<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LOG_SIGN.Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="413dp"
        android:layout_height="59dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Login_Hint_Email"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/colorSecondaryDark"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:hint="@string/Login_Hint_Password"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/LogIn"
        android:layout_width="148dp"
        android:layout_height="58dp"
        android:text="@string/LogIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar_login"
        app:layout_constraintVertical_bias="0.559"
        android:textColor="@color/textColorPrimary"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/SignUp"
        android:layout_width="148dp"
        android:layout_height="58dp"
        android:text="@string/SignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734"
        android:textColor="@color/textColorPrimary"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/ForgotPassword"
        android:layout_width="148dp"
        android:layout_height="58dp"
        android:text="@string/Forgot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734"
        android:textColor="@color/textColorPrimary"
        android:background="@color/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>