<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MiniApps.Calcul_IMC">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="99dp"
        android:layout_height="108dp"
        android:orientation="vertical"
        android:showDividers="beginning|middle|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062">

        <RadioButton
            android:id="@+id/Hom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minHeight="48dp"
            android:text="Homme" />

        <RadioButton
            android:id="@+id/Fem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:text="Femme" />

    </RadioGroup>

    <ImageView
        android:id="@+id/smileIV"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/calculBTN"
        android:contentDescription="@null"
        android:src="@drawable/emoji"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

    <RelativeLayout
        android:id="@+id/userinputRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/radioGroup"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075">

        <TextView
            android:id="@+id/poidsTV"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/Poids"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/poidsET"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_below="@+id/poidsTV"
            android:hint="@string/poids_hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/tailleTV"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_below="@+id/poidsET"
            android:layout_marginTop="20dp"
            android:text="@string/Height"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tailleET"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_below="@+id/tailleTV"
            android:hint="@string/height_hint"
            android:inputType="number" />


    </RelativeLayout>

    <TextView
        android:id="@+id/resultatTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/smileIV"
        android:layout_toEndOf="@+id/smileIV"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />

    <Button
            android:id="@+id/calculBTN"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/userinputRL"
            android:background="@color/colorAccent"
            android:text="@string/Calculer"
            android:textColor="@color/textColorPrimary"
            android:textSize="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>