<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MiniApps.Factoriel">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_Factoriel"
        android:layout_width="413dp"
        android:layout_height="59dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/msg"
        android:layout_width="226dp"
        android:layout_height="92dp"
        android:text="@string/Message"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />
    <TextView
        android:id="@+id/result"
        android:layout_width="226dp"
        android:layout_height="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Fact_hint"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/colorSecondaryDark"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Fact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calcule"
        android:layout_width="148dp"
        android:layout_height="58dp"
        android:background="@color/colorPrimary"
        android:text="@string/calcul_fact"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

</androidx.constraintlayout.widget.ConstraintLayout>